--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Rishabh Singh",
   "license": "ISC",
@@ -13,11 +15,13 @@
     "bcryptjs": "^2.4.3",
     "check": "^1.0.0",
     "config": "^3.3.1",
+    "create-react-app": "^3.4.1",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "request": "^2.88.2"
-  }
+  },
+  "devDependencies": {}
 }
