--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "check": "^1.0.0",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "create-react-app": "^3.4.1",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
