--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "request": "^2.88.2"
   },
   "devDependencies": {}
